--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>KAKASHI HATAKE</h1>
+    <p>Kakashi Hatake is the best Shinobi in the World! He is called as Copy Ninja as well as Kakashi with the Sharingan!</p>
 </body>
 </html>
