--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <a href="/index2.html"></a>
     <h1>KAKASHI HATAKE</h1>
     <p>Kakashi Hatake is the best Shinobi in the World! He is called as Copy Ninja as well as Kakashi with the Sharingan!</p>
 </body>
